--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -468,44 +468,31 @@ input:-webkit-autofill {
       .formField-input .input .popup::-webkit-scrollbar, .formField-input .select .popup::-webkit-scrollbar, .formField-select .input .popup::-webkit-scrollbar, .formField-select .select .popup::-webkit-scrollbar {
         width: 0px;
         background: transparent; }
-      .formField-input .input .popup .gradient, .formField-input .select .popup .gradient, .formField-select .input .popup .gradient, .formField-select .select .popup .gradient {
-        width: 100%;
-        height: 20%;
-        position: absolute;
-        bottom: 0;
-        background: linear-gradient(to top, white, rgba(255, 255, 255, 0)); }
       .formField-input .input .popup .select-group-list, .formField-input .select .popup .select-group-list, .formField-select .input .popup .select-group-list, .formField-select .select .popup .select-group-list {
-        overflow-y: scroll;
-        overflow-x: hidden;
-        min-width: 240px;
-        max-height: 192px;
         display: flex;
         flex-direction: column;
         align-items: center;
         padding: 5px 8px; }
-        .formField-input .input .popup .select-group-list::-webkit-scrollbar, .formField-input .select .popup .select-group-list::-webkit-scrollbar, .formField-select .input .popup .select-group-list::-webkit-scrollbar, .formField-select .select .popup .select-group-list::-webkit-scrollbar {
-          width: 0px;
-          background: transparent; }
         .formField-input .input .popup .select-group-list .select-option-container, .formField-input .select .popup .select-group-list .select-option-container, .formField-select .input .popup .select-group-list .select-option-container, .formField-select .select .popup .select-group-list .select-option-container {
-          height: 32px;
+          width: 224px;
           border-radius: 4px;
-          width: 224px; }
+          margin-bottom: 4px; }
           .formField-input .input .popup .select-group-list .select-option-container:hover, .formField-input .select .popup .select-group-list .select-option-container:hover, .formField-select .input .popup .select-group-list .select-option-container:hover, .formField-select .select .popup .select-group-list .select-option-container:hover {
             background-color: #F8FAFB; }
           .formField-input .input .popup .select-group-list .select-option-container .select-option, .formField-input .select .popup .select-group-list .select-option-container .select-option, .formField-select .input .popup .select-group-list .select-option-container .select-option, .formField-select .select .popup .select-group-list .select-option-container .select-option {
-            border-radius: 4px;
             display: flex;
             justify-content: space-between;
             align-items: center;
             color: #717285; }
-            .formField-input .input .popup .select-group-list .select-option-container .select-option-container, .formField-input .select .popup .select-group-list .select-option-container .select-option-container, .formField-select .input .popup .select-group-list .select-option-container .select-option-container, .formField-select .select .popup .select-group-list .select-option-container .select-option-container {
+            .formField-input .input .popup .select-group-list .select-option-container .select-option-container-small, .formField-input .select .popup .select-group-list .select-option-container .select-option-container-small, .formField-select .input .popup .select-group-list .select-option-container .select-option-container-small, .formField-select .select .popup .select-group-list .select-option-container .select-option-container-small {
+              height: 32px;
               display: flex;
               align-items: center; }
-              .formField-input .input .popup .select-group-list .select-option-container .select-option-container .select-option-span, .formField-input .select .popup .select-group-list .select-option-container .select-option-container .select-option-span, .formField-select .input .popup .select-group-list .select-option-container .select-option-container .select-option-span, .formField-select .select .popup .select-group-list .select-option-container .select-option-container .select-option-span {
+              .formField-input .input .popup .select-group-list .select-option-container .select-option-container-small .select-option-span, .formField-input .select .popup .select-group-list .select-option-container .select-option-container-small .select-option-span, .formField-select .input .popup .select-group-list .select-option-container .select-option-container-small .select-option-span, .formField-select .select .popup .select-group-list .select-option-container .select-option-container-small .select-option-span {
                 position: absolute;
                 width: 40px;
                 height: 15px; }
-              .formField-input .input .popup .select-group-list .select-option-container .select-option-container .select-option-flag, .formField-input .select .popup .select-group-list .select-option-container .select-option-container .select-option-flag, .formField-select .input .popup .select-group-list .select-option-container .select-option-container .select-option-flag, .formField-select .select .popup .select-group-list .select-option-container .select-option-container .select-option-flag {
+              .formField-input .input .popup .select-group-list .select-option-container .select-option-container-small .select-option-flag, .formField-input .select .popup .select-group-list .select-option-container .select-option-container-small .select-option-flag, .formField-select .input .popup .select-group-list .select-option-container .select-option-container-small .select-option-flag, .formField-select .select .popup .select-group-list .select-option-container .select-option-container-small .select-option-flag {
                 margin-left: 15px; }
             .formField-input .input .popup .select-group-list .select-option-container .select-option-prefix, .formField-input .select .popup .select-group-list .select-option-container .select-option-prefix, .formField-select .input .popup .select-group-list .select-option-container .select-option-prefix, .formField-select .select .popup .select-group-list .select-option-container .select-option-prefix {
               margin-right: 15px; }
@@ -514,7 +501,7 @@ input:-webkit-autofill {
               .formField-input .input .popup .select-group-list .select-option-container .select-option-country-selected, .formField-input .select .popup .select-group-list .select-option-container .select-option-country-selected, .formField-select .input .popup .select-group-list .select-option-container .select-option-country-selected, .formField-select .select .popup .select-group-list .select-option-container .select-option-country-selected {
                 color: #000000;
                 margin-left: 15px; }
-    .formField-input .input .select-open, .formField-input .select .select-open, .formField-select .input .select-open, .formField-select .select .select-open {
+    .formField-input .input .open, .formField-input .select .open, .formField-select .input .open, .formField-select .select .open {
       display: block; }
 
 .button-primary {
