--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -25,7 +25,6 @@ input:-webkit-autofill {
     
     &.focus {
       border-color: $color-focus;
-      
       .input input, .select button {
         color: $color-main;
       }
@@ -41,7 +40,6 @@ input:-webkit-autofill {
 
     &.error{
       border-color: $color-fb-negative;
-      
       .input input, .select button {
         color: $color-main;
       }
@@ -121,47 +119,37 @@ input:-webkit-autofill {
             width: 0px;
             background: transparent;
           }
-          .gradient{
-            width: 100%;
-	          height: 20%;
-	          position:absolute;
-	          bottom:0;
-	          background: linear-gradient(to top, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
-          }
+
           .select-group-list{
-            overflow-y: scroll;
-            overflow-x: hidden;
-            min-width: 240px;
-            max-height: 192px;
             display:flex;
             flex-direction: column;
             align-items: center;
             padding: 5px 8px;
-            &::-webkit-scrollbar {
-              width: 0px;
-              background: transparent;
-            }
+
             .select-option-container{
-                height: 32px;
-                border-radius: 4px; 
-                width: 224px;
+              width: 224px;
+              border-radius: 4px; 
+              margin-bottom: 4px;
                 &:hover{
                   background-color: $color-selago;
                 }
               .select-option{
-                border-radius: 4px;
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
                 color: $color-positive-light;
-                &-container{
+
+                &-container-small{
+                  height: 32px;
                   display: flex;
                   align-items: center;
+
                   .select-option-span{
                     position: absolute;
                     width: 40px;
                     height: 15px;
                   }
+              
                   .select-option-flag{
                     margin-left: 15px; 
                   }
@@ -170,6 +158,7 @@ input:-webkit-autofill {
                 &-prefix{
                   margin-right: 15px;
                 }
+
                 &-country{
                   margin-left: 15px;
                   &-selected{
@@ -179,10 +168,9 @@ input:-webkit-autofill {
                 }
               }
             }
-            
           }
         }
-      .select-open{
+      .open{
         display: block;
       }
     }
